added devops column

--- a/technologies.html
+++ b/technologies.html
@@ -43,7 +43,7 @@
 
     <div class="container px-4 py-5" id="featured-3">
       <h2 class="pb-2 border-bottom">Technologies</h2>
-      <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      <div class="row g-4 py-5 row-cols-1 row-cols-lg-4">
         <div class="feature col">
 
           <h2>Frontend</h2>
@@ -69,6 +69,15 @@
             <li class="list-group-item">MySQL</li>
             <li class="list-group-item">MariaDB </li>
             <li class="list-group-item">Microsoft SQL Server</li>
+          </ul>
+        </div>
+
+        <div class="feature col">
+
+          <h2>DevOps</h2>
+          <ul class="list-group">
+            <li class="list-group-item">Git + Github</li>
+            <li class="list-group-item">Docker </li>
           </ul>
         </div>
       </div>
