--- a/projects.html
+++ b/projects.html
@@ -47,10 +47,10 @@
           <div class="col-sm-12">
             <br>
             <br>
-            <ol class="list-group list-group-numbered">
+            <ol class="list-group list-group">
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
-                  <div class="fw-bold">Habarusite</div>
+                  <div class="fw-bold m-4">Habarusite <a href="https://github.com/akuzendev/habarusite">View Repository..</a></div>
                   An Article Management System that can allow a User to setup a news website where users can comment and report content on the app, Writers can add articles, and Admins can control the application.
                 </div>
                 <span class="badge bg-primary rounded-pill m-3">MdBootstrap</span>
@@ -60,8 +60,8 @@
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
-                  <div class="fw-bold">Alphine News</div>
-                  Recreation of Habarusite using Laravel. Follows the MVC artitecture.
+                  <div class="fw-bold m-4">Alphine News <a href="https://github.com/akuzendev/alphinenews">View Repository..</a></div>
+                  Alphine News is a Recreation of Habarusite using Laravel. Follows the MVC artitecture.
                 </div>
                 <span class="badge bg-primary rounded-pill m-3">Bootstrap</span>
                 <span class="badge bg-success rounded-pill m-3">Laravel 8</span>
@@ -69,7 +69,7 @@
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
-                  <div class="fw-bold">Asset Tracker</div>
+                  <div class="fw-bold m-4">Asset Tracker <a href="https://github.com/akuzendev/AssetTracker">View Repository..</a></div>
                   A Warehouse Management System, Follows MVC Artitecture, Allows a logged in user to CRUD items into a Database.
                 </div>
                 <span class="badge bg-primary rounded-pill m-3">Bootstrap</span>
